--- a/Win32/Debug/CONFIG.INI
+++ b/Win32/Debug/CONFIG.INI
@@ -4,7 +4,7 @@ CaminhoServidor=https://msgestor.info/txt/
 CodigoCliente=9010118
 quantidade_de_vias=1
 Sequencia=0
-SequenciaTXT=0
+SequenciaTXT=104579
 SequenciaXML=0
 largura=0
 fundo=0
@@ -13,18 +13,12 @@ direita=0
 esqueda=0
 tipo=0
 Impressora=
-[PRINTER]
+[c:\teste]
 Modelo=0
-Porta=
-DeviceParams=
+Porta=RAW:Microsoft Print to PDF
 Colunas=1
 EspacoEntreLinhas=0
-LinhasEntreCupons=0
 LinhasBuffer=0
 LinhasPular=0
-CortarPapel=0
-ControlePorta=1
-TraduzirTags=1
-IgnorarTags=0
+CortarPapel=1
 PaginaDeCodigo=0
-ArqLog=
